...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ef7-It-4Rs">
                                                <rect key="frame" x="47" y="0.0" width="320" height="44"/>
                                                <color key="textColor" name="Text"/>
...
                                        <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Add Tribe">
                                            <color key="titleColor" name="Text"/>
                                        </state>
...
                                                <rect key="frame" x="0.0" y="0.0" width="103.5" height="58"/>
                                                <color key="tintColor" name="MainBottomIcons"/>
                                                <state key="normal" image="bottomBar1"/>
                                                <connections>
                                                    <action selector="bottomBarButtonTouched:" destination="28a-MN-hzt" eventType="touchUpInside" id="34z-AL-EK4"/>
...
                                                <rect key="frame" x="103.5" y="0.0" width="103.5" height="58"/>
                                                <color key="tintColor" name="MainBottomIcons"/>
                                                <state key="normal" image="bottomBar2"/>
                                                <connections>
                                                    <action selector="bottomBarButtonTouched:" destination="28a-MN-hzt" eventType="touchUpInside" id="0wJ-3e-b4h"/>
...
                                                <rect key="frame" x="207" y="0.0" width="103.5" height="58"/>
                                                <color key="tintColor" name="MainBottomIcons"/>
                                                <state key="normal" image="bottomBar3"/>
                                                <connections>
                                                    <action selector="bottomBarButtonTouched:" destination="28a-MN-hzt" eventType="touchUpInside" id="4tA-1U-UD6"/>
...
                                                <rect key="frame" x="310.5" y="0.0" width="103.5" height="58"/>
                                                <color key="tintColor" name="MainBottomIcons"/>
                                                <state key="normal" image="bottomBar4"/>
                                                <connections>
                                                    <action selector="bottomBarButtonTouched:" destination="28a-MN-hzt" eventType="touchUpInside" id="nHo-PK-U6G"/>
...
        <scene sceneID="mR6-dD-8wi">
            <objects>
                <viewController storyboardIdentifier="DashboardFeedsContainerViewController" id="izJ-JO-cwu" customClass="DashboardFeedsContainerViewController" customModule="sphinx" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="XKi-k6-l8l">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
        <scene sceneID="qKk-C4-9MQ">
            <objects>
                <viewController storyboardIdentifier="ChatsContainerViewController" id="Nnq-TE-Byc" customClass="ChatsContainerViewController" customModule="sphinx" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="aa3-I2-cdN">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
...
